[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheke"
dynamic = ["version"]
description = "A cute framework for small self-hosted apps"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Humberto Rocha", email = "humrochagf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiotinydb",
  "email-validator",
  "fastapi",
  "jinja2",
  "passlib[bcrypt]",
  "pydantic",
  "pydantic-settings",
  "python-jose[cryptography]",
  "python-multipart",
  "rich",
  "uvicorn[standard]",
]

[project.scripts]
wheke = "wheke.__main__:cli"

[project.urls]
Documentation = "https://github.com/unknown/wheke#readme"
Issues = "https://github.com/unknown/wheke/issues"
Source = "https://github.com/unknown/wheke"

[tool.hatch.version]
path = "src/wheke/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]",
  "pytest",
  "black",
  "mypy",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
typing = "mypy --install-types --non-interactive {args:src/wheke tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
  "cov",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.black]
exclude = """
.env
| .hatch
| .mypy_cache
| .venv
| __pycache__
| env
| venv
"""

[tool.ruff]
exclude = [
  ".env",
  ".hatch",
  ".mypy_cache",
  ".venv",
  "__pycache__",
  "env",
  "venv",
]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["wheke"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wheke", "tests"]
branch = true
parallel = true
omit = [
  "src/wheke/__about__.py",
]

[tool.coverage.paths]
wheke = ["src/wheke", "*/wheke/src/wheke"]
tests = ["tests", "*/wheke/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
