[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheke"
dynamic = ["version"]
description = "A cute framework for small self-hosted apps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Humberto Rocha", email = "humrochagf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi",
  "pydantic",
  "pydantic-settings",
  "rich",
  "svcs",
  "typer",
]

[project.scripts]
wheke = "wheke.__main__:cli"

[project.urls]
Documentation = "https://wheke.humberto.io/"
Issues = "https://github.com/humrochagf/wheke/issues"
Source = "https://github.com/humrochagf/wheke"

[tool.hatch.version]
path = "src/wheke/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "httpx",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov"
tests = "pytest {args:tests}"
typing = "mypy --install-types --non-interactive {args:src/wheke tests}"
lint = "ruff check {args:.}"
fmt = "ruff format {args:.}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
server = "mkdocs serve"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.ruff]
exclude = [
  ".env",
  ".hatch",
  ".mypy_cache",
  ".venv",
  "__pycache__",
  "env",
  "venv",
]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Same line string implicit string concatenation
  "ISC001",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["wheke"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wheke", "tests"]
branch = true
parallel = true
omit = [
  "src/wheke/__about__.py",
]

[tool.coverage.paths]
wheke = ["src/wheke", "*/wheke/src/wheke"]
tests = ["tests", "*/wheke/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = """
  .env
  | .hatch
  | .mypy_cache
  | .venv
  | __pycache__
  | env
  | venv
"""
